# IncCamera

./: README.md  gradlew.bat  settings.gradle
Dlibrary/: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dramascript/inccamera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: lbpcascade_frontalface.xml
app/src/main/cpp/: FaceTrack.cpp  native-lib.cpp
app/src/main/cpp/FaceAlignment/: CMakeLists.txt
app/src/main/cpp/ffmpegInclude/libavutil/: common.h  ffversion.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/cpp/player/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  IncFFmpeg.cpp  IncFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  macro.h  safe_queue.h
app/src/main/cpp/pusher/: AudioPusher.cpp  AudioPusher.h  VideoPusher.cpp  VideoPusher.h
app/src/main/cpp/track/: FaceTrack.cpp  FaceTrack.h
app/src/main/java/com/dramascript/inccamera/: App.java  CameraActivity.java  MainActivity.java  SplashActivity.java
app/src/main/java/com/dramascript/inccamera/filter/: AbstractFilter.java  AbstractFrameFilter.java  BeautyFilter.java  BigEyeFilter.java  CameraFilter.java  ScreenFilter.java  StickFilter.java
app/src/main/java/com/dramascript/inccamera/filter/face/: Face.java  FaceTrack.java
app/src/main/java/com/dramascript/inccamera/imp/: ImpBaseActivity.java  ImpBaseFragment.java  ImpMvpActivity.java
app/src/main/java/com/dramascript/inccamera/player/: IncPlayer.java
app/src/main/java/com/dramascript/inccamera/pusher/: AudioChannel.java  LivePusher.java  PusherCameraHelper.java  VideoChannel.java
app/src/main/java/com/dramascript/inccamera/utils/: CameraHelper.java  EGLBase.java  MediaRecorder.java  OpenGLUtils.java
app/src/main/java/com/dramascript/inccamera/widget/: CircleProgressBar.java  IncRenderer.java  IncView.java  RecordButton.java
app/src/main/res/drawable/: bg_greg.xml
app/src/main/res/layout/: ac_camera.xml  ac_play.xml  ac_pusher.xml  ac_splash.xml  activity_main.xml  activity_play.xml  item_album.xml
app/src/main/res/layout-land/: activity_play.xml
app/src/main/res/raw/: base_frag.frag  base_vertex.vert  beauty_frag.frag  bigeye_frag.frag  camera_frag.frag  camera_vertex.vert
app/src/main/res/values/: attrs.xml  strings.xml  styles.xml
app/src/test/java/com/dramascript/inccamera/: ExampleUnitTest.java
(+76 files in other folders)
